# chos

./: .gdbinit  .gitignore  1  Cargo.toml  Makefile  b  boot.txt  bootstrap.sh  chos-kernel.txt  chos.toml  clippy.toml  doc  foo.tar  gdb  memory_map.txt  redirection.txt  rustfmt.toml
.cargo/: config.toml
arch/: x86_64-chos.json
boot/: Cargo.toml  project.toml
boot/arch/: x86_64-chos-boot.json  x86_64.ld  x86_64.mk
boot/arch/x86_64/: grub.cfg  project.toml  startup.nsh  x86_64-chos-uefi.json
boot/src/: main.rs
boot/src/arch/: mod.rs
boot/src/arch/x64/: acpi.rs  cmdline.rs  intr.rs  kernel.rs  mb.rs  mod.rs  mpstart.rs  panic.rs  qemu.rs  symbols.rs  timer.rs  util.rs
boot/src/arch/x64/acpi/: hpet.rs  madt.rs  mcfg.rs  mod.rs
boot/src/arch/x64/asm/: kernel_start.S  mod.rs  mpstart.S  multiboot.S  start32.S  start64.S  vga.S
boot/src/arch/x64/kernel/: mapper.rs  mod.rs  palloc.rs  reloc.rs
boot/src/arch/x64/log/: mod.rs  serial.rs  vga.rs
boot/src/tests/: mod.rs
docs/: boot.txt  kernel_page_map.txt  memory_map.txt
drivers/block/ahci/: Cargo.toml
drivers/block/ahci/src/: lib.rs
drivers/bus/pci/: Cargo.toml
drivers/fs/ext2/: Cargo.toml
drivers/fs/ext2/src/: lib.rs
drivers/fs/initrd/: Cargo.toml
drivers/fs/initrd/src/: lib.rs
drivers/fs/ramfs/: Cargo.toml
drivers/fs/ramfs/src/: lib.rs
kernel/: Cargo.toml  config.txt  project.toml
kernel/arch/: x86_64-chos-kernel.json  x86_64.ld  x86_64.mk
kernel/arch/x86_64/: linker.ld  project.toml
kernel/chos-bin/: Cargo.toml
kernel/chos-bin/src/: lib.rs
kernel/chos-macros/: Cargo.toml
kernel/src/: config.rs  cpumask.rs  dummy.rs  early.rs  initrd.rs  intr.rs  kmain.rs  lib.rs  log.rs  main.rs  module.rs  panic.rs  percpu.rs  symbols.rs  timer.rs  util.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x64/: early.rs  intr.rs  kmain.rs  mod.rs  sched.rs  timer.rs
kernel/src/arch/x64/asm/: call.S  early.S  mod.rs
kernel/src/arch/x64/intr/: mod.rs
kernel/src/arch/x64/mm/: mod.rs  per_cpu.rs  virt.rs
kernel/src/arch/x64/reg/: mod.rs
kernel/src/async_/: lock.rs  mod.rs  mpsc.rs  oneshot.rs  sem.rs
kernel/src/driver/: mod.rs
kernel/src/driver/block/: mod.rs
kernel/src/fs/: buf.rs  mod.rs  path.rs
kernel/src/mm/: global.rs  mod.rs  per_cpu.rs  slab.rs  stack.rs  virt.rs  vmap.rs
kernel/src/mm/phys/: alloc.rs  mod.rs  raw_alloc.rs
kernel/src/mm/virt/: mapper.rs  mod.rs  stack.rs
kernel/src/resource/: mod.rs
kernel/src/sched/: early.rs  idle.rs  ktask.rs  mod.rs
kernel/src/sched/sync/: mod.rs  queue.rs  sem.rs
lib/acpica/: Cargo.toml  Makefile  build.rs
lib/chos-boot-defs/: Cargo.toml
lib/chos-boot-defs/src/: lib.rs  macros.rs
lib/chos-config/: Cargo.toml
lib/chos-config/src/: domain.rs  lib.rs
lib/chos-config/src/arch/: mod.rs
lib/chos-config/src/arch/x64/: mm.rs  mod.rs
lib/chos-elf/: Cargo.toml
lib/chos-elf/src/: dynamic.rs  gnu_hash.rs  lib.rs  macros.rs  program.rs  raw.rs  rela.rs  section.rs  strtab.rs  symtab.rs
lib/chos-lib/: Cargo.toml
lib/chos-lib-macros/: Cargo.toml
lib/chos-lib-macros/src/: bitfield.rs  fmt.rs  lib.rs
lib/chos-lib-macros/src/arch/: mod.rs
lib/chos-lib-macros/src/arch/x64/: intr.rs  mod.rs
lib/chos-lib/src/: access.rs  array.rs  bitfield.rs  bitmap.rs  boxed.rs  config.rs  cpumask.rs  duration.rs  either.rs  fmt.rs  init.rs  int.rs  iter.rs  lib.rs  log.rs  macros.rs  mem.rs  pod.rs  ptr.rs  queue.rs  str.rs  stride.rs  tuple.rs  volatile.rs
lib/chos-lib/src/arch/: mod.rs
lib/chos-lib/src/arch/x64/: boot.rs  bt.rs  cache.rs  hpet.rs  macros.rs  mod.rs  port.rs  qemu.rs  serial.rs
lib/chos-lib/src/arch/x64/acpi/: fadt.rs  madt.rs  mcfg.rs  mod.rs
lib/chos-lib/src/arch/x64/apic/: command.rs  interrupt.rs  mod.rs  reg.rs
lib/chos-lib/src/arch/x64/intr/: mod.rs
lib/chos-lib/src/arch/x64/ioapic/: mod.rs
lib/chos-lib/src/arch/x64/mm/: mapper.rs  mod.rs  paging.rs
lib/chos-lib/src/arch/x64/msr/: efer.rs  mod.rs
lib/chos-lib/src/arch/x64/paging/: mod.rs
lib/chos-lib/src/arch/x64/regs/: cr.rs  flags.rs  mod.rs  seg.rs
lib/chos-lib/src/arch/x64/tables/: gdt.rs  idt.rs  mod.rs  tss.rs
lib/chos-lib/src/async_/: lock.rs  mod.rs  sem.rs
lib/chos-lib/src/boot/: mod.rs
lib/chos-lib/src/elf/: dynamic.rs  gnu_hash.rs  mod.rs  program.rs  raw.rs  rela.rs  section.rs  strtab.rs  symtab.rs
lib/chos-lib/src/intrusive/: hash_table.rs  list.rs  mod.rs  pointer.rs  slist.rs
lib/chos-lib/src/mm/: addr.rs  mod.rs
lib/chos-lib/src/pool/: arc.rs  boxed.rs  mod.rs
lib/chos-lib/src/spin/: lock.rs  mod.rs  raw.rs  sem.rs
lib/chos-lib/src/sync/: channel.rs  fake.rs  lazy.rs  lock.rs  mod.rs  rwlock.rs  sem.rs
lib/chos-lib/src/sync/lock/: mod.rs  spin.rs
lib/chos-lib/src/sync/spin/: barrier.rs  lazy.rs  lock.rs  mod.rs  sem.rs
lib/chos-lib/src/tar/: mod.rs  raw.rs  util.rs
lib/chos-test/: Cargo.toml
lib/chos-test-macros/: Cargo.toml
lib/chos-test-macros/src/: lib.rs
lib/chos-test/src/: lib.rs
lib/chos-x64/: Cargo.toml
lib/chos-x64/src/: bt.rs  hpet.rs  lib.rs  macros.rs  qemu.rs
lib/chos-x64/src/apic/: mod.rs  reg.rs  timer.rs
lib/chos-x64/src/ioapic/: mod.rs  redirection.rs
lib/chos-x64/src/paging/: mod.rs
script/: deploy.py  qemu.py  runner.py  util.py
