
[workspace]
members = [
    "boot",
    "kernel",
    "kernel/chos-bin",
    "lib/*",
    "drivers/*/*",
]
exclude = [
    "build",
    "target",
]

[workspace.metadata.chos]
projects = [
    "boot",
    "kernel/chos-bin",
]
flags = [
    "-Zbuild-std=core,alloc",
    "-Zbuild-std-features=compiler-builtins-mem"
]
initrd-drivers = [
    "chos-fs-ext2",
    "chos-bus-pci",
    "chos-block-ahci",
]

[workspace.metadata.chos.static-drivers]
ramfs = "chos-fs-ramfs"
