[package]
name = "chos-boot"
version = "0.1.0"
authors = ["chrou"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
chos-config = { path = "../lib/chos-config" }
chos-lib = { path = "../lib/chos-lib" }
modular-bitfield = "0.11.2"
multiboot2 = "0.10.1"
rustc-demangle = "0.1.18"
static_assertions = "1.1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.1"
raw-cpuid = "9.0.0"