[package]
name = "chos-boot"
version = "0.1.0"
authors = ["chrou"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
chos-config = { path = "../lib/chos-config" }
chos-lib = { path = "../lib/chos-lib" }
modular-bitfield = "0.11.2"
multiboot2 = "0.13.1"
rustc-demangle = "0.1.18"
static_assertions = "1.1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "10.3.0"

[package.metadata.chos]
type = "boot"
rustc-flags = ["-Crelocation-model=static"]

[package.metadata.chos.debug]
flags = ["--features=chos-lib/log-debug"]

[package.metadata.chos.release]
flags = ["--features=chos-lib/log-info"]

[package.metadata.chos.x86_64]
target = "file:../arch/x86_64-chos.json"
linker-script = "./arch/x86_64/linker.ld"
deploy = ["chos-boot.elf", "/boot/boot.elf"]
copy = [
    ["./arch/x86_64/grub.cfg", "/boot/grub/grub.cfg"]
]
