[package]
name = "chos"
version = "0.1.0"
authors = ["Christian Harper-Cyr <charpercyr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['dylib']

[dependencies]
bitflags = "1.3.2"
cfg-if = "1.0.0"
chos-config = { path = "../lib/chos-config" }
chos-lib = { path = "../lib/chos-lib", features = ["alloc"] }
modular-bitfield = "0.11.2"
multiboot2 = "0.13.1"
paste = "1.0.4"
rustc-demangle = "0.1.18"

[dependencies.bitvec]
version = "0.22.3"
default-features = false
# features = []

[dependencies.cstr_core]
version = "0.2.5"
features = ["alloc", "nightly"]

[dependencies.intrusive-collections]
git = "https://github.com/charpercyr/intrusive-rs"
features = ["nightly"]
