[package]
name = "chos-config"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chos-lib = { path = "../chos-lib" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
chos-x64 = { path = "../chos-x64" }