[package]
name = "chos-lib-macros"
version = "0.1.0"
authors = ["Christian Harper-Cyr <charpercyr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.24"
syn = { version = "1.0.48", features = ["full"] }
quote = "1.0.7"

[lib]
proc-macro = true
