[package]
name = "chos-lib"
version = "0.1.0"
authors = ["Christian Harper-Cyr <charpercyr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
cfg-if = "1.0.0"
chos-lib-macros = { path = "../chos-lib-macros" }
modular-bitfield = "0.11.2"
paste = "1.0.5"
siphasher = "0.3.7"
static_assertions = "1.1.0"

[dependencies.either]
version = "1.6.1"
default-features = false

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.1"

[features]
default = ["alloc"]
alloc = []
log-critical = []
log-error = ["log-critical"]
log-warn = ["log-error"]
log-info = ["log-warn"]
log-debug = ["log-info"]
