[package]
name = "chos-x64"
version = "0.1.0"
authors = ["chrou"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chos-lib = { path = "../chos-lib" }
modular-bitfield = "0.11.2"
static_assertions = "1.1.0"
x86_64 = "0.14.1"
