[package]
name = "chos-fs-ext2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
chos = { path = "../../../kernel" }
chos-lib = { path = "../../../lib/chos-lib" }
chos-bin = { path = "../../../kernel/chos-bin" }