[package]
name = "chos-fs-ramfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chos = { path = "../../../kernel" }
chos-lib = { path = "../../../lib/chos-lib" }

[dependencies.intrusive-collections]
git = "https://github.com/charpercyr/intrusive-rs"
features = ["nightly"]
